added second project image and the title bar

--- a/index.html
+++ b/index.html
@@ -14,6 +14,26 @@
                 <h1 class="party">New Year Party <br> Celebration</h1>
 
             </div>
+            <section class="second-project">
+                <div class="off-rafi">
+                    <h1 class="first-title">65% OFF</h1>
+                    <h4 class="second-title">OUR HOLIDAY DEALS ARE BETTER</h4>
+                    <h3 class="third-title">ALL CATEGORIES</h3>
+                    <div class="image">
+                        <img src="B9A1-New-Year-New-Mission/resources/New Year Photo.png" alt="">
+
+                    </div>
+
+                </div>
+            </section>
+            <section class="Third-project">
+                <div class="twenty-four">
+                    <h1>Welcome to midnight party</h1>
+                    <h5>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </h5>
+                    
+
+                </div>
+            </section>
            
         </section>
 
